[workspace]
members = ["pacman"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Xevion <xevion@xevion.dev>"]
license = "MIT"
repository = "https://github.com/Xevion/Pac-Man"
description = "A Pac-Man game written in Rust"

[workspace.dependencies]
# Common dependencies that might be shared across crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"


# Release profile for profiling (essentially the default 'release' profile with debug enabled)
[profile.profile]
inherits = "release"
debug = true
# Undo the customizations for our release profile
opt-level = 3
lto = false
panic = 'unwind'

# Optimized release profile for size
[profile.release]
opt-level = "z"
lto = true
panic = "abort"

# This profile is intended to appear as a 'release' profile to the build system due to`debug_assertions = false`,
# but it will compile faster without optimizations. Useful for rapid testing of release-mode logic.
[profile.dev-release]
inherits = "dev"
debug-assertions = false
