[workspace]
members = ["pacman"]
resolver = "2"

[workspace.package]
authors = ["Xevion"]
edition = "2021"
readme = true
homepage = "https://pacman.xevion.dev"
repository = "https://github.com/Xevion/Pac-Man"
license = "GPL-3.0-or-later"
keywords = ["game", "pacman", "arcade", "sdl2"]
categories = ["games", "emulators"]
publish = false

[workspace.dependencies]
# Common dependencies that might be shared across crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"


# Release profile for profiling (essentially the default 'release' profile with debug enabled)
[profile.profile]
inherits = "release"
debug = true
# Undo the customizations for our release profile
opt-level = 3
lto = false
panic = 'unwind'

# Optimized release profile for size
[profile.release]
opt-level = "z"
lto = true
panic = "abort"

# This profile is intended to appear as a 'release' profile to the build system due to`debug_assertions = false`,
# but it will compile faster without optimizations. Useful for rapid testing of release-mode logic.
[profile.dev-release]
inherits = "dev"
debug-assertions = false
