[workspace]
members = ["pacman", "pacman-common", "pacman-server"]
resolver = "2"

[workspace.package]
authors = ["Xevion"]
edition = "2021"
readme = true
homepage = "https://pacman.xevion.dev"
repository = "https://github.com/Xevion/Pac-Man"
license = "GPL-3.0-or-later"
keywords = ["game", "pacman", "arcade", "sdl2"]
categories = ["games", "emulators"]
publish = false

[profile.dev]
incremental = true

# Release profile for profiling (essentially the default 'release' profile with debug enabled)
[profile.profile]
inherits = "release"
debug = true
# Undo the customizations for our release profile
opt-level = 3
lto = false
panic = "abort"
strip = "symbols"

# Optimized release profile for size
[profile.release]
opt-level = "z"
lto = true
panic = "abort"

# This profile is intended to appear as a 'release' profile to the build system due to`debug_assertions = false`,
# but it will compile faster without optimizations. Useful for rapid testing of release-mode logic.
[profile.dev-release]
inherits = "dev"
debug-assertions = false
